Add the possibility to get a measure by a substring contained in its trigger href.
